Added parsing for command-line options and arguments

--- a/test/example.html
+++ b/test/example.html
@@ -23,7 +23,7 @@
 <body>
 
     <aside>
-        <button type="button" data-url="http://localhost:2112/tests/" data-method="GET">GET</button>
+        <button type="button" data-url="http://example@localhost:2112/tests/" data-method="GET">GET</button>
     </aside>
 
     <form>
